--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en-us">
-  <head>
+<head>
     <meta charset="UTF-8">
     <title>SkySCRAPER</title>
-    <style src="./styles/styles.css"></style>
+    <link rel="stylesheet" href="./styles/styles.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="./javascript/app.js"></script>
 </head>
@@ -15,6 +15,7 @@
     <h2>
         The Gaming News Aggregator
     </h2>
+    <button id="startscrape">SCRAPE ARTICLES</button>
     <div id="wrapper">
       <h1>What's currently happening in the gaming universe</h1>
 
@@ -22,7 +23,6 @@
       </div>
       <div id="notes"></div>
     </div>
-    <button id="initiateScrape">SCRAPE ARTICLES</button>
 
 </body>
 </html>
